pufferlib/ocean/tower_climb/tower_climb.h

#define LOG_BUFFER_SIZE 1024
	
typedef struct Log Log;
struct Log {
    float episode_return;
    float episode_length;
    float rows_cleared;
};
typedef struct LogBuffer LogBuffer;
struct LogBuffer {
    Log* logs;
    int length;
    int idx;
};
LogBuffer* allocate_logbuffer(int size) {
    LogBuffer* logs = (LogBuffer*)calloc(1, sizeof(LogBuffer));
    logs->logs = (Log*)calloc(size, sizeof(Log));
    logs->length = size;
    logs->idx = 0;
    return logs;
}
void free_logbuffer(LogBuffer* buffer) {
    free(buffer->logs);
    free(buffer);
}
Log aggregate_and_clear(LogBuffer* logs) {
    Log log = {0};
    if (logs->idx == 0) {
        return log;
    }
    for (int i = 0; i < logs->idx; i++) {
        log.episode_return += logs->logs[i].episode_return;
        log.episode_length += logs->logs[i].episode_length;
    	log.rows_cleared += logs->logs[i].rows_cleared;
    }
    log.episode_return /= logs->idx;
    log.episode_length /= logs->idx;
    log.rows_cleared /= logs->idx;
    logs->idx = 0;
    return log;
}
typedef struct TowerClimb TowerClimb;
struct TowerClimb {
    float* observations;
    int* actions;
    float* rewards;
    unsigned char* dones;
    LogBuffer* log_buffer;
    Log log;
    float score;
    int width;
    int height;
    int map_choice;
    int robot_position; 
    int robot_direction;
    int robot_state;
    int robot_orientation;
    int* board_state; 
    int* blocks_to_move;
    int* blocks_to_fall;
    int block_grabbed;
    int rows_cleared;
};
void init(TowerClimb* env) {
    // int map_size = map_sizes[env->map_choice - 1];

    env->board_state = (int*)calloc(288, sizeof(int));
    env->block_grabbed = -1;
    env->blocks_to_move = (int*)calloc(6, sizeof(int));
    env->blocks_to_fall = (int*)calloc(288, sizeof(int));
    env->rows_cleared = 0;
    env->robot_orientation = UP;
    for (int i = 0; i < 6; i++){
        env->blocks_to_move[i] = -1;
    }
    memcpy(env->board_state, level_one, 288 * sizeof(int));
    memset(env->blocks_to_fall, -1, 288 * sizeof(int));
}
void free_allocated(TowerClimb* env) {
    free(env->actions);
    free(env->observations);
    free(env->dones);
    free(env->rewards);
    free_logbuffer(env->log_buffer);
    free_initialized(env);
}
void reset(TowerClimb* env) {
    env->log = (Log){0};
	env->dones[0] = 0;
    env->robot_position = 64;
    env->robot_direction =2;
    env->robot_state = DEFAULT;
    env->block_grabbed = -1;
    memcpy(env->board_state, level_one, 288 * sizeof(int));
    compute_observations(env);
}
void step(TowerClimb* env) {
    env->log.episode_length += 1;
    env->rewards[0] = 0.0;
    int action = env->actions[0];
    if (action != NOOP) {
        if (action == LEFT || action == RIGHT || action == DOWN || action == UP) {
            int direction = get_direction(env, action);
            int moving_block = (env->block_grabbed != -1 && abs(env->robot_direction - action) == 2);
            if (direction == env->robot_orientation || moving_block || env->robot_state == HANGING){
                env->robot_direction = direction;
                handle_move_forward(env, action);
                int below_index = env->robot_position - 36;
                // check if goal is below current position
                if (env->board_state[below_index] == 2){
                    env->dones[0] = 1;
                    env->rewards[0] = 1;
                    env->log.episode_return += 1;
                    add_log(env->log_buffer, &env->log);
                    reset(env);
                }
            }
            else {
                env->robot_direction = direction;
                env->robot_orientation = direction;
            }

        }
        else if (action == GRAB){
            handle_grab_block(env);
        }
        else if (action == DROP){
            env->block_grabbed = -1;
            if(env->robot_state == HANGING){
                handle_drop(env);
            }
        }
    }
    compute_observations(env);
}
typedef struct Client Client;
struct Client {
    float width;
    float height;
    Texture2D puffers;
    Camera3D camera;
    Model robot;
};
Client* make_client(TowerClimb* env) {
    Client* client = (Client*)calloc(1, sizeof(Client));
    client->width = env->width;
    client->height = env->height;
    InitWindow(env->width, env->height, "PufferLib Ray Tower Climb");
    SetTargetFPS(60);
    client->puffers = LoadTexture("resources/puffers_128.png");
    client->camera = (Camera3D){ 0 };
    client->camera.position = (Vector3){ 0.0f, 15.0f, 12.0f };  // Move camera further back and higher up
    client->camera.target = (Vector3){ 2.0f, 4.0f, 2.0f };     // Keep looking at same target point
    client->camera.up = (Vector3){ 0.0f, 1.0f, 0.0f };
    client->camera.fovy = 45.0f;
    client->camera.projection = CAMERA_PERSPECTIVE;
    // client->robot = LoadModel("resources/robot.glb"); 
  return client;
}
void render(Client* client, TowerClimb* env) {
    if (IsKeyDown(KEY_ESCAPE)) {
        exit(0);
    }
    BeginDrawing();
    ClearBackground(PUFF_BACKGROUND);    
    BeginMode3D(client->camera);

    for(int i= 0; i < 288; i++){
        if(env->board_state[i] > 0){
            int floor = i / 36;
            int grid_pos = i % 36;
            int x = grid_pos % 6;
            int z = grid_pos / 6;
            Color cubeColor = (env->board_state[i] == 1) ? STONE_GRAY : PUFF_CYAN;  // Gray for blocks, Cyan for goal
            DrawCube(
                (Vector3){x * 1.0f, floor * 1.0f, z * 1.0f},
                1.0f, 1.0f, 1.0f,
                cubeColor
            );
            if(i == env->block_grabbed){
                DrawCubeWires(
                (Vector3){x * 1.0f, floor * 1.0f, z * 1.0f},
                1.0f, 1.0f, 1.0f,
                RED);
            }else {
                DrawCubeWires(
                (Vector3){x * 1.0f, floor * 1.0f, z * 1.0f},
                1.0f, 1.0f, 1.0f,
                BLACK
            );
            }
            
        }
    }

    // calculate robot position
    int floor = env->robot_position / 36;
    int grid_pos = env->robot_position % 36;
    int x = grid_pos % 6;
    int z = grid_pos / 6;
    
    Vector3 spherePos = (Vector3){ 
        x * 1.0f,
        floor * 1.0f,  // One unit above platform
        (z * 1.0f)
    };

    // Draw sphere character
    DrawSphere(spherePos, 0.3f, YELLOW);  // 0.3 radius yellow sphere
    // Draw direction arrow
    float arrowLength = 0.5f;
    Vector3 arrowStart = (Vector3){
        spherePos.x,
        spherePos.y + 0.4f,  // Start slightly above sphere
        spherePos.z
    };
    
    // Calculate arrow end based on direction
    Vector3 arrowEnd = arrowStart;
    switch(env->robot_orientation) {
        case 0: // right
            arrowEnd.x += arrowLength;
            break;
        case 1: // down
            arrowEnd.z += arrowLength;
            break;
        case 2: // left
            arrowEnd.x -= arrowLength;
            break;
        case 3: // up
            arrowEnd.z -= arrowLength;
            break;
    }

    // Draw arrow shaft (thin cylinder)
    if (env->robot_state == DEFAULT){
        DrawCylinderEx(arrowStart, arrowEnd, 0.05f, 0.05f, 8, RED);
    } else {
        DrawCylinderEx(arrowStart, arrowEnd, 0.05f, 0.05f, 8, PURPLE);
    }
    
    // Draw arrow head (thicker, shorter cylinder)
    Vector3 headStart = arrowEnd;
    Vector3 headEnd = arrowEnd;
    switch(env->robot_orientation) {
        case 0: // right
            headEnd.x += 0.2f;
            break;
        case 1: // down
            headEnd.z += 0.2f;
            break;
        case 2: // left
            headEnd.x -= 0.2f;
            break;
        case 3: // up
            headEnd.z -= 0.2f;
            break;
    }
    if (env->robot_state == DEFAULT){
        DrawCylinderEx(headStart, headEnd, 0.1f, 0.0f, 8, RED);  // Tapered cylinder for arrow head
    } else {
        DrawCylinderEx(headStart, headEnd, 0.1f, 0.0f, 8, PURPLE);  // Tapered cylinder for arrow head
    }

    EndMode3D();
    EndDrawing();
}
void close_client(Client* client) {
    CloseWindow();
    UnloadModel(client->robot);
    free(client);
}